syntax = "proto3";
package POGOProtos.Map.Pokemon;

import public "Enums/PokemonType.proto";

message NearbyPokemon {
	POGOProtos.Enums.PokemonType pokemon_type = 1;
	float distance_in_meters = 2;
	fixed64 encounter_id = 3;
}
