syntax = "proto3";
package POGOProtos;

import "Map/MapCell.proto";
import "Map/MapObjectsStatus.proto";

message MapObjects {
  repeated POGOProtos.Map.MapCell map_cells = 1;
  POGOProtos.Map.MapObjectsStatus status = 2;
}
